--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">The Hungry Bunch 3.0</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_order">Order</string>
+    <string name="title_pay">Pay</string>
     <string name="title_splash">Splash</string>
     <string name="login_title">LOGIN</string>
     <string name="user">USERNAME</string>
@@ -19,5 +19,6 @@
     <string name="regButton">Register</string>
     <string name="navSignIn">Sign In</string>
     <string name="alreadyHaveAccount">Already Have An Account?</string>
+    <string name="testNavButton">SKIP</string>
 
 </resources>
