The purchase button ow passes the total amount as it is to the pay fragment in a text view Remaining  functionality is now firebase registration and authentication then cloud messaging to send the vendor the order

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,10 @@
     <string name="checkout_meal_chosen">%1$s</string>
     <string name="checkout_subtotal_fee">%1$.2f</string>
     <string name="checkout_total_fee">%1$.2f</string>
-
+    <string name="quantity">Quantity</string>
+    <string name="successful_order">Successful Order</string>
+    <string name="order_more_food">Order More Food😋!</string>
+    <string name="pay_the_amount_below">Pay The Amount Below When Your Order Arrives</string>
 
 
 </resources>
